# TpIntegradorFinal-App

./: .gitignore  pyproject.toml  requirements.txt
app/src/: api.py  app.py  test.py  utils.py
app/src/agent/: agent.py  dia.py  dqn.py  pasajero.py  train.py  utils.py
app/src/data/: df_final.csv
app/src/data/eda/: clima_dist.csv  estacionalidad.csv  tipo_servicio.csv  trafico_dist.csv  zonas.csv
models/asd/: 20250209_model.h5
models/modelo 3/: 20250209_model.keras
outputs/: asd2_output.csv  asd_output.csv  chuni_output.csv  modelo 3_output.csv  prueba 1_output.csv  training_data.csv
