[project]
name = "tpintegradorcsdatos"
version = "0.1.0"
description = ""
authors = [
    {name = "Percivati"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy (>=1.26.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "datetime (>=5.5,<6.0)",
    "tensorboard (==2.18.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorflow (==2.18.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow_intel (==2.18.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
