[project]
name = "serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=5.5",
    "fastapi>=0.115.8",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
    "tensorflow==2.16.2",
    "uvicorn>=0.34.0",
]
